# nexfort_releases

./: README.md  pyproject.toml  pyproject_cu124.toml
.github/workflows/: canary.yml  github-publish.yml  github_release.yml  python-publish.yml  release.yml  wheels_build.yml
scripts/: install_deps.sh
